--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-tailwind-starter",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://assistant-voyage-japon.onrender.com",
+  "homepage": "https://github.com/theoleprince/japan-travel-starter",
   "dependencies": {
     "lucide-react": "^0.511.0",
     "react": "^18.2.0",
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
