--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-tailwind-starter",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/theoleprince/japan-travel-starter",
+  "homepage": "https://theoleprince.github.io/japan-travel-starter/",
   "dependencies": {
     "lucide-react": "^0.511.0",
     "react": "^18.2.0",
